--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,19 @@
               </configuration>
             </execution>
           </executions>
+      </plugin>
+      <plugin>
+          <groupId>org.ekstazi</groupId>
+          <artifactId>ekstazi-maven-plugin</artifactId>
+          <version>4.6.3</version>
+          <executions>
+              <execution>
+                  <id>ekstazi</id>
+                    <goals>                                                                                                                                                  
+                        <goal>select</goal>
+                    </goals>
+                </execution>
+            </executions>
         </plugin>
     </plugins>
 
